Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-multiple-env-service
spec:
  selector:
    app: node-multiple-env
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
